--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "29.0.2"
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "com.example.administrator.coolweather"
@@ -20,7 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.+'
+    // compile fileTree(dir:'libs',include:['*.jar'])
+    // compile 'com.android.support:appcompat - v7:24.2.1'
+    // testCompile 'junit:junit:4.12'
+    compile 'org.litepal.android:core:1.3.2'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //   implementation 'org.litepal.android:java:3.0.0'
 }
